# Flori

./: .dockerignore  .env.example  .gitignore  .test_durations  CLAUDE.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  coverage-backend.json  coverage-frontend.json  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.executor.yml  docker-compose.fe-test.yml  docker-compose.integration-test.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  history.csv  mutation-ai_gateway.json  mutation-db.json  mutation-worker.json  pyproject.toml  schemathesis.toml  trend.md
api/: business_admission.py  deps.py  exact_dr.py  main.py  minio_capacity_store.py  pricing_store.py  recovery.py  recovery_worker.py  schemas.py  wire_schemas.py
configs/: document_kinds.yaml  document_source_alternatives.yaml  pipelines.integration.yaml  pipelines.yaml  pools.yaml  providers.yaml  resources.yaml  sources.yaml  venues.yaml
deploy/: README.md
design/: prototype.html
docker/: base.Dockerfile  e2e.Dockerfile  install-deno.sh  step-base.Dockerfile  step-heavy.Dockerfile
docs/: 00-vision.md  01-architecture.md  02-domain-model.md  03-contracts.md  05-content-adapters.md  06-prompt-engineering.md  07-security.md  08-deployment.md  09-testing.md  10-observability.md  11-dev-workflow.md  12-cicd.md  13-dependencies.md  14-comment-and-doc-style.md  README.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
scheduler/: background.py  dag_planner.py  effects.py  job_finalizer.py  (+5 more)
(+738 files in other folders)
