[project]
name = "mnemo"
version = "0.1.0"
description = "AI-assisted personal learning knowledge base"
requires-python = ">=3.11"
dependencies = [
    "redis>=8,<9",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
]

[project.optional-dependencies]
steps = [
    "yutto>=2.0",
    "yt-dlp>=2024.0",
    "scenedetect[opencv]>=0.6",
    "Pillow>=10.0",
    "imagehash>=4.3",
    "scikit-image>=0.22",
    "rapidocr-onnxruntime>=1.3",
    "pymupdf>=1.24",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiofiles>=24.0",
    "slowapi>=0.1",
    "python-multipart>=0.0.9",
]
gpu = [
    "faster-whisper>=1.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis[lua]>=2.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "steps*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
